<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sort_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/sort_by" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort_by_name"
            android:textSize="12sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/name_rating_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rating_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/sort_by_rating" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ascending_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/sort_orderAscending" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/ascending_descending_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descending_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/sort_orderDescending" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurants_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" />
</LinearLayout>