<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    tools:context=".ui.restaurantView.RestaurantFragment"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_restaurant_view"
    android:background="#3EB489">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:srcCompat="@{item.avatarResId}" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/leave_us_a_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/leave_a_review"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/review_box"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/review_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="6"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/review" />
        </com.google.android.material.textfield.TextInputLayout>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/action_settings"
            android:isIndicator="false"
            android:max="5"
            android:numStars="5"
            android:rating="0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_load_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/add_photo"
                android:textSize="8sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_submit_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/submit_review"
                android:textSize="8sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/add_location"
                android:textSize="8sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviews_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/action_settings" />

</LinearLayout>