<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp"
        android:id="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#F2AC9F9F"
                android:backgroundTintMode="multiply"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:padding="10dp"
                    android:text="@string/restaurant_name"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#000000"
                    android:textSize="24sp" />

                <LinearLayout
                    android:id="@+id/linear_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/restaurant_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="false"
                        android:layout_margin="5dp"
                        android:layout_weight="9"
                        android:background="#80A6A6A6"
                        android:fontFamily="@font/montserrat_bold"
                        android:padding="10dp"
                        android:text="@string/restaurant_location"
                        android:textAlignment="viewStart" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/restaurant_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="false"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="#80A6A6A6"
                        android:fontFamily="@font/montserrat_bold"
                        android:padding="10dp"
                        android:text="@string/restaurant_rating"
                        android:textAlignment="viewEnd" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/restaurant_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/montserrat_bold"
                android:padding="10dp"
                android:text="@string/restaurant_description"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>